Novo texto na sessão 'Serviços'

--- a/Site-movePlus/index.html
+++ b/Site-movePlus/index.html
@@ -114,11 +114,10 @@
             <div class="img-servicos">
                 <div >
                     <img src="./img/logo.png" alt="" class="logo-servicos">
-                    <h3>Lorem ipsum is simply dummy of the printing ante typesetting.</h3>
-                    <p class="text-servicos">Pensando nos benefícios que podíamos oferecer para os nossos clientes, 
-                       desenvolvemos um projeto onde será possível monitorar maquinas de 
-                       carregamento para bilhetes únicos e saber se estão apropriadas para 
-                       o uso da população e assim, evitando maiores transtornos.</p>
+                    <h3>Trabalhando todos os dias para facilitar o seu dia-a-dia.</h3>
+                    <p class="text-servicos">Nosso objetivo é tornar a experiência cotidiana do uso e gerenciamento do transporte público algo descomplicado para ambas as partes: usuários e analistas.
+                        Ajudando em macro análises, ampliando a visão do suporte, transformando dados em informações de simples compreensão e facilitando estrátegias de ações e administração, 
+                        consequentemente refletindo no dia-dia dos usuários do transporte e na qualidade de sua infraestrutura.</p>
 
                     <div style="display: flex;">
                         <i class="far fa-check-circle text-servicos"></i> 
