Novo texto da home

--- a/Site-movePlus/index.html
+++ b/Site-movePlus/index.html
@@ -41,15 +41,16 @@
     <section class="container" id="home">
         <div class="conteudo">
             <div class="titulo-home">
-                <h1>Lorem Ipsum is simply <span style="color: #00D3FF;">dummy text of the</span> is simply dummy text.
+                <h1>Facilitando a<span style="color: #00D3FF;"> sua vida.</span>
                 </h1>
             </div>
             <div class="sublinhado"></div>
             <div class="text-home">
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type.
+                    Sabemos que a vida de quem trabalha nos bastidores do metrô e trem não é fácil, e Sabemos
+                    que a vida de quem utiliza o serviço também não é. Estamos aqui para facilitar o dia a dia de quem
+                    suporta os terminais de recarga das estações e dos passageiros que os utilizam todos os dias, levando
+                    eficiência para quem cuida, e transparência para quem usa. 
                 </p>
             </div>
             <div class="div-button-home">
