Novo título para 'Time'

--- a/Site-movePlus/index.html
+++ b/Site-movePlus/index.html
@@ -130,7 +130,7 @@
             <div class="bloco-time" style="display: flex;">
                 <div class="texto-time">
                     <p>TIME</p>
-                    <h3>Lorem ipsum is simply dummy of the printing ante typesetting.</h3>
+                    <h3>Conheça o time que trabalha todo dia para facilitar o seu dia.</h3>
                 </div>
                 <div>
                     <div class="foto-integrante">
