Novas informações no footer

--- a/Site-movePlus/index.html
+++ b/Site-movePlus/index.html
@@ -209,16 +209,16 @@
                 <p>Design by MovePlus</p>
             </div>
             <div>
-                <h1>jfoapdsjfopas</h1>
-                <p>fdasjoipjopfdsa</p>
+                <h1>E-mail</h1>
+                <p>contato@moveplus.com.br</p>
             </div>
             <div>
-                <h1>jfoapdsjfopas</h1>
-                <p>fdasjoipjopfdsa</p>
+                <h1>Telefone</h1>
+                <p>(11) 96729-8245</p>
             </div>
             <div>
-                <h1>jfoapdsjfopas</h1>
-                <p>fdasjoipjopfdsa</p>
+                <h1>Endereço</h1>
+                <p>Rua Haddock Lobo, 695</p>
             </div>
         </div>
     </footer>
