Novo botão Enviar na área de contato e título e favicon da páigna alterados

--- a/Site-movePlus/index.html
+++ b/Site-movePlus/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Move+</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tablet.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="img/circle-cropped.png" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="./js/jquery-3.5.0.js"></script>
 </head>
@@ -47,7 +48,7 @@
             <div class="sublinhado"></div>
             <div class="text-home">
                 <p>
-                    Sabemos que a vida de quem trabalha nos bastidores do metrô e trem não é fácil, e Sabemos
+                    Sabemos que a vida de quem trabalha nos bastidores do metrô e trem não é fácil, e sabemos
                     que a vida de quem utiliza o serviço também não é. Estamos aqui para facilitar o dia a dia de quem
                     suporta os terminais de recarga das estações e dos passageiros que os utilizam todos os dias, levando
                     eficiência para quem cuida, e transparência para quem usa. 
@@ -190,6 +191,7 @@
                             <input type="number" placeholder="Telefone" class="input">
                             <textarea name="" id="" cols="30" rows="10" class="text-area"
                                 placeholder="mensagem"></textarea>
+                            <button>ENVIAR</button>    
                         </div>
                     </div>
                 </div>
