--- a/Site-movePlus/index.html
+++ b/Site-movePlus/index.html
@@ -158,7 +158,7 @@
                 </div>
                 <div>
                     <div class="foto-integrante">
-                        <img src="./img/tavares.jpg" alt="" class="fotos">
+                        <img src="./img/adriano.heic" alt="" class="fotos" style="height:295px">
                     </div>
                     <p class="nome-time">Adriano Tavares</p>
                     <p class="nome-time">Analista</p>
