--- a/Site-movePlus/index.html
+++ b/Site-movePlus/index.html
@@ -107,20 +107,17 @@
             <div class="img-servicos">
                 <div>
                     <img src="./img/logo.png" alt="" class="logo-servicos">
-                    <h3>Trabalhando todos os dias para facilitar o seu dia-a-dia.</h3>
-                    <p class="text-servicos">Nosso objetivo é tornar a experiência cotidiana do uso e gerenciamento do
-                        transporte público algo descomplicado para ambas as partes: usuários e analistas.
+                    <h3>Trabalhando todos os dias para facilitar o seu dia a dia.</h3>
+                    <p class="text-servicos">Nosso objetivo é tornar a experiência cotidiana do uso e gerenciamento dos
+                        terminais de recarga do transporte público algo descomplicado para ambas as partes: usuários e analistas.
                         Ajudando em macro análises, ampliando a visão do suporte, transformando dados em informações de
-                        simples compreensão e facilitando estrátegias de ações e administração,
-                        consequentemente refletindo no dia-dia dos usuários do transporte e na qualidade de sua
-                        infraestrutura.</p>
+                        simples compreensão e facilitando estrátegias de ação e administração.
+                    </p>
                     <div style="display: flex;">
                         <i class="far fa-check-circle text-servicos"></i>
-                        <p class="text-servicos">Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. Provident quaerat
-                            debitis recusandae libero veniam, soluta error,
-                            vitae minima ullam excepturi sapiente, dicta numquam
-                            illum ducimus laudantium omnis expedita similique iste?</p>
+                        <p class="text-servicos">Com a nossa plataforma de monitoração de terminais de recarga,
+                            podemos levar transparência para os passageiros e eficiência para os analistas. 
+                        </p>
                     </div>
                 </div>
             </div>
