Botão pagina de contato

--- a/Site-movePlus/index.html
+++ b/Site-movePlus/index.html
@@ -188,7 +188,15 @@
                             <input type="number" placeholder="Telefone" class="input">
                             <textarea name="" id="" cols="30" rows="10" class="text-area"
                                 placeholder="mensagem"></textarea>
-                            <button>ENVIAR</button>    
+                            <button style=" border-top-right-radius: 20px;
+                            border-bottom-left-radius: 20px;
+                            background-color: #00D3FF;
+                            padding: 20px 40px 20px 40px;
+                            margin: 5px;
+                            color: white;
+                            font-weight: 700;
+                            width: 200px;
+                            font-size: 1rem;">ENVIAR</button>    
                         </div>
                     </div>
                 </div>
