Alterações no perfil da dash mobile

--- a/projeto/site-institucional/index.html
+++ b/projeto/site-institucional/index.html
@@ -262,42 +262,12 @@
       </section>
       <!--  Informação adicional -->
 
-      <!-- ======= Informações adicionais ======= -->
-      <section id="features" class="features">
-        <div class="container" data-aos="fade-up">
-          <div class="row feature-item">
-            <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-              <img src="assets/img/redesSoci.png" class="img-fluid" alt="" />
-            </div>
-            <div
-              class="col-lg-6 wow fadeInUp pt-5 pt-lg-0"
-              data-aos="fade-left"
-              data-aos-delay="150"
-            >
-              <h4>
-                Voluptatem dignissimos provident quasi corporis voluptates sit
-                assumenda.
-              </h4>
-              <p>
-                Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati
-                possimus ea. Quas molestiae perspiciatis occaecati qui rerum.
-                Deleniti quod porro sed quisquam saepe. Numquam mollitia
-                recusandae non ad at et a.
-              </p>
-              <p>
-                Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti.
-                Odit qui asperiores ea corporis deserunt veritatis quidem
-                expedita perferendis. Qui rerum eligendi ex doloribus quia sit.
-                Porro rerum eum eum.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Informações adicionais -->
-
       <!-- ======= Seção time ======= -->
-      <section id="team" class="team section-bg">
+      <section
+        id="team"
+        class="team section-bg"
+        style="background-color: white"
+      >
         <div class="container" data-aos="fade-up">
           <div class="section-header">
             <h3 style="color: #3d3d3d">Time</h3>
