--- a/projeto/Dashboard/dashboard/cadTerminais.html
+++ b/projeto/Dashboard/dashboard/cadTerminais.html
@@ -150,22 +150,44 @@
 
             <!-- ------------------------- -->
         
-            <div class="flex-profile">
-                <div>
-                    <div class="viewProfile">
-                        <h3>Novo terminal</h3>
-                        <p>Aqui será possível o cadastro de novas maquinas!</p>
+                <div class="flex-profile">
+                    <div class="flex">
+                        <div class="viewProfile">
+                            <h3>Cadastrar terminal</h3>
+                            <p>Aqui será possível o cadastro de novas maquinas!</p>
+                        </div>
+                        <div class="cards-profile">
+                            <div class="cadMachine">
+                                <button>
+                                    Novo Terminal
+                                </button>
+                                <input type="text" placeholder="Pesquisar terminal">
+                                <button class="btn-filtro">
+                                    Filtrar
+                                </button>
+                            </div>
+                            <div class="cards">    
+                                <div class="card">
+                                    ghsdf
+                                </div>
+                                <div class="card">
+                                    sgf
+                                </div>
+                                <div class="card">
+                                    sfgd
+                                </div>
+                                <div class="card">
+                                    gs
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="cards-profile">
-
-                    </div>
-                </div>
                     <footer>
                         <div class="copy">
                             <h3>© MovePlus 2020</h3>
                             <p>Todos os direitos reservados.</p>
                         </div>
-                     </footer>
+                    </footer>
                 </div>
             </div>
         </section>
