Estilização dos cards de cadastro

--- a/projeto/Dashboard/dashboard/cadTerminais.html
+++ b/projeto/Dashboard/dashboard/cadTerminais.html
@@ -168,16 +168,64 @@
                             </div>
                             <div class="cards">    
                                 <div class="card">
-                                    ghsdf
+                                    <div class="txtCard">
+                                        <h3>Terminal 1</h3>
+                                    </div>
+                                    <div class="img-card">
+                                        <div class="border-radius">
+                                        <img src="./img/icon-machina.png" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="icon">
+                                        <img src="./img/verified.png" alt="" width="30px">
+                                        <img src="./img/plus.png" alt="" width="30px">
+                                        <img src="./img/remove.png" alt="" width="30px">
+                                    </div>
                                 </div>
                                 <div class="card">
-                                    sgf
+                                    <div class="txtCard">
+                                        <h3>Terminal 2</h3>
+                                    </div>
+                                    <div class="img-card">
+                                        <div class="border-radius">
+                                        <img src="./img/icon-machina.png" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="icon">
+                                        <img src="./img/verified.png" alt="" width="30px">
+                                        <img src="./img/plus.png" alt="" width="30px">
+                                        <img src="./img/remove.png" alt="" width="30px">
+                                    </div>
                                 </div>
                                 <div class="card">
-                                    sfgd
+                                    <div class="txtCard">
+                                        <h3>Terminal 3</h3>
+                                    </div>
+                                    <div class="img-card">
+                                        <div class="border-radius">
+                                        <img src="./img/icon-machina.png" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="icon">
+                                        <img src="./img/verified.png" alt="" width="30px">
+                                        <img src="./img/plus.png" alt="" width="30px">
+                                        <img src="./img/remove.png" alt="" width="30px">
+                                    </div>
                                 </div>
                                 <div class="card">
-                                    gs
+                                    <div class="txtCard">
+                                        <h3>Terminal 4</h3>
+                                    </div>
+                                    <div class="img-card">
+                                        <div class="border-radius">
+                                        <img src="./img/icon-machina.png" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="icon">
+                                        <img src="./img/verified.png" alt="" width="30px">
+                                        <img src="./img/plus.png" alt="" width="30px">
+                                        <img src="./img/remove.png" alt="" width="30px">
+                                    </div>
                                 </div>
                             </div>
                         </div>
