alterações no site institucional

--- a/projeto/site-institucional/index.html
+++ b/projeto/site-institucional/index.html
@@ -218,7 +218,7 @@
                     style="color: #ff689b"
                   ></i>
                 </div>
-                <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+                <h4 class="title"><a href="">Dados que importam.</a></h4>
                 <p class="description">
                   Nosso objetivo é tornar a experiência cotidiana do uso e
                   gerenciamento dos terminais de recarga do transporte público
@@ -242,7 +242,7 @@
       <!-- Fim seção serviços -->
 
       <!-- ======= informação adicional ======= -->
-      <section id="call-to-action" class="call-to-action">
+      <!-- <section id="call-to-action" class="call-to-action">
         <div class="container" data-aos="zoom-out">
           <div class="row">
             <div class="col-lg-9 text-center text-lg-left">
@@ -259,7 +259,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!--  Informação adicional -->
 
       <!-- ======= Seção time ======= -->
@@ -272,7 +272,7 @@
           <div class="section-header">
             <h3 style="color: #3d3d3d">Time</h3>
             <p style="color: #3d3d3d">
-              Time de desenvolvedores que compoe a MovePlus
+              Conheça o time que trabalha todo dia para facilitar a sua vida.
             </p>
           </div>
 
@@ -286,76 +286,8 @@
                 <img src="assets/img/team-2.jpg" class="img-fluid" alt="" />
                 <div class="member-info">
                   <div class="member-info-content">
-                    <h4>Fernando Laurito</h4>
-                    <span>Front-End Developer</span>
-                    <div class="social">
-                      <a href=""><i class="fa fa-twitter"></i></a>
-                      <a href=""><i class="fa fa-facebook"></i></a>
-                      <a href=""><i class="fa fa-google-plus"></i></a>
-                      <a href=""><i class="fa fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-3 col-md-6"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
-              <div class="member">
-                <img src="assets/img/team-2.jpg" class="img-fluid" alt="" />
-                <div class="member-info">
-                  <div class="member-info-content">
-                    <h4>Dedeco</h4>
-                    <span>Product Manager</span>
-                    <div class="social">
-                      <a href=""><i class="fa fa-twitter"></i></a>
-                      <a href=""><i class="fa fa-facebook"></i></a>
-                      <a href=""><i class="fa fa-google-plus"></i></a>
-                      <a href=""><i class="fa fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-3 col-md-6"
-              data-aos="fade-up"
-              data-aos-delay="300"
-            >
-              <div class="member">
-                <img src="assets/img/team-3.jpg" class="img-fluid" alt="" />
-                <div class="member-info">
-                  <div class="member-info-content">
-                    <h4>Ericão</h4>
-                    <span>CTO</span>
-                    <div class="social">
-                      <a href=""><i class="fa fa-twitter"></i></a>
-                      <a href=""><i class="fa fa-facebook"></i></a>
-                      <a href=""><i class="fa fa-google-plus"></i></a>
-                      <a href=""><i class="fa fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div
-              class="col-lg-3 col-md-6"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <div class="member">
-                <img src="assets/img/team-1.jpg" class="img-fluid" alt="" />
-                <div class="member-info">
-                  <div class="member-info-content">
-                    <h4>Baaaaaaara</h4>
-                    <span>Front-End Developer</span>
+                    <h4>Adriano Diogo</h4>
+                    <span>Full Stack Developer</span>
                     <div class="social">
                       <a href=""><i class="fa fa-twitter"></i></a>
                       <a href=""><i class="fa fa-facebook"></i></a>
@@ -376,8 +308,76 @@
                 <img src="assets/img/team-4.jpg" class="img-fluid" alt="" />
                 <div class="member-info">
                   <div class="member-info-content">
-                    <h4>Dedeco</h4>
-                    <span>Product Manager</span>
+                    <h4>Adriano Tavares</h4>
+                    <span>Full Stack Developer</span>
+                    <div class="social">
+                      <a href=""><i class="fa fa-twitter"></i></a>
+                      <a href=""><i class="fa fa-facebook"></i></a>
+                      <a href=""><i class="fa fa-google-plus"></i></a>
+                      <a href=""><i class="fa fa-linkedin"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div
+              class="col-lg-3 col-md-6"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              <div class="member">
+                <img src="assets/img/team-1.jpg" class="img-fluid" alt="" />
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Beatriz-Barbosa</h4>
+                    <span>Full Stack Developer</span>
+                    <div class="social">
+                      <a href=""><i class="fa fa-twitter"></i></a>
+                      <a href=""><i class="fa fa-facebook"></i></a>
+                      <a href=""><i class="fa fa-google-plus"></i></a>
+                      <a href=""><i class="fa fa-linkedin"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div
+              class="col-lg-3 col-md-6"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="member">
+                <img src="assets/img/team-3.jpg" class="img-fluid" alt="" />
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Erick Leme</h4>
+                    <span>Full Stack Developer</span>
+                    <div class="social">
+                      <a href=""><i class="fa fa-twitter"></i></a>
+                      <a href=""><i class="fa fa-facebook"></i></a>
+                      <a href=""><i class="fa fa-google-plus"></i></a>
+                      <a href=""><i class="fa fa-linkedin"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div
+              class="col-lg-3 col-md-6"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="member">
+                <img src="assets/img/fernando.jpg" class="img-fluid" alt="" />
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Fernando Laurito</h4>
+                    <span>Full Stack Developer</span>
                     <div class="social">
                       <a href=""><i class="fa fa-twitter"></i></a>
                       <a href=""><i class="fa fa-facebook"></i></a>
@@ -465,10 +465,8 @@
               <div class="form">
                 <h4>Entre em contato</h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Blanditiis incidunt similique vitae porro nobis numquam
-                  nostrum, molestiae omnis asperiores eaque minus. Quos possimus
-                  veniam doloremque deserunt ad aut fugit maxime.
+                  Ficou com uma dúvida? Quer melhorar sua oferta se serviços? Fala com a gente,
+                  respondemos o mais rápido possível.
                 </p>
 
                 <form
