Banco no azure + design menu + cadastros funcionando

--- a/projeto/Dashboard/Login/index.html
+++ b/projeto/Dashboard/Login/index.html
@@ -98,6 +98,13 @@
                   <p><i class="fas fa-exclamation-circle"></i> Digite uma credêncial válida</p>
                 </div>
               </div>
+
+              <div class="form-group" style="height: 59px;">
+                <select name="" id="selectStation" class="form-control">
+                  <option value="">Selecione a estação</option>
+                </select>
+              </div>
+
               <div class="form-group">
                 <input type="password" placeholder="" id="senhaCad" class="form-control" />
                 <label for="">Senha</label>
