--- a/projeto/Dashboard/dashboard/perfil.html
+++ b/projeto/Dashboard/dashboard/perfil.html
@@ -9,6 +9,9 @@
     <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./css/tablet.css">
     <link rel="stylesheet" href="./css/desktop.css">
     <link rel="stylesheet" href="./css/profile.css">
@@ -59,43 +62,56 @@
             </div>
             <ul class="menu-hidden" id="menuHidden">
                 <div class="logo">
-                    <img src="./img/logo-movePlus.png" alt="">
+                    <img src="./img/logomove-removebg-preview.png" alt="">
                 </div>
-                <div class="link">
-                    <a href="../Login/viewEstation.html">Ver estações</a>
+
+                <div class="logo img-menu-profile">
+                    <div class="img-menu">
+                        <img src="./img/perfil (2).png" alt="" style=" width: 100%;">
+                    </div>
+                    <h3 style="color: white; margin: 5px 0; text-transform: uppercase; font-size: 14px;" id="nomeMenu"></h3>
+                    <p style="color: white; font-size: 14px; font-weight: 300;" id="credMenu"></p>
                 </div>
+
                 <li>
                     <a href="./dash.html">
-                        <img src="./img/icon-dashboard.png" alt="">
+                        <i class="material-icons icon-active">dashboard</i>
                         Dashboard
                     </a>
                 </li>
 
                 <li>
                     <a href="./cadTerminais.html">
-                        <img src="./img/icon-machina.png" alt="">
+                        <i class="material-icons">add_to_queue</i>
                         Nova Maquina
                     </a>
                 </li>
 
                 <li class="item-active">
                     <a href="./perfil.html">
-                        <img src="./img/user-icon.png" alt="">
+                        <i class="material-icons">person</i>
                         Perfil
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <i class="material-icons">help_outline</i>
+                        Ajuda
                     </a>
                 </li>
 
                 <li class="btn-logout" onclick="logout()">
                     <a>
-                        <img src="./img/icon-logout.png" alt="">
-                        Logout
+                        <i class="material-icons">power_settings_new</i>
+                        Sair da conta
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <main style="background: linear-gradient(to right, #48bfe3, #72efdd); background-repeat: no-repeat; height: 320px; border-radius: 0 0 5px 5px;">
+    <main>
         <section class="container-flex">
             <div class="flex-station">
                 <div class="viewStation">
@@ -104,7 +120,7 @@
                     </div>
                     <div class="profile-notification perfil-desk">
                         <div class="popover">
-                            <img src="./img/icon-notification.png" alt="" class="active-pop">
+                            <img src="./img/icon-notification2.png" alt="" class="active-pop">
                             <div class="pop">
                                 <div class="popuptext">
                                     <div style="padding: 20px 30px; box-sizing: border-box;">
@@ -121,9 +137,9 @@
                         <div class="profile">
                             <img src="./img/perfil (2).png" alt="" class="img-profile">
 
-                            <h3 class="muda" id="user">Fernando Laurito</h3>
+                            <h3 class="muda" id="user" style="color: #3d3d3d;"></h3>
 
-                            <i class="fas fa-angle-down" id="info-profile"></i>
+                            <i class="fas fa-angle-down" id="info-profile" style="color: #3d3d3d;"></i>
 
                             <i class="fas fa-angle-up" id="up-profile" style="color: #3d3d3dc5; display:none;"></i>
                             <div class="profile-active">
@@ -154,11 +170,11 @@
             <div class="flex-profile">
                 <div>
                     <div class="viewProfile">
-                        <h3>Perfil</h3>
-                        <p>Visualize e atualize suas informações de perfil !</p>
+                        <h3 style="color: #3d3d3d;">Perfil</h3>
+                        <p style="color: #3d3d3d; text-shadow: none;">Visualize e atualize suas informações de perfil !</p>
                     </div>
                     <div class="cards-profile">
-                        <div class="card-profile">
+                        <div class="card-profile" style="border: solid 1px #3d3d3d34; box-shadow: none;">
                             <div class="img-card">
                                 <div>
                                     <img src="./img/perfil (2).png" alt="">
@@ -170,7 +186,7 @@
                             </div>
                         </div>
 
-                        <div class="info-profile">
+                        <div class="info-profile" style="border: solid 1px #3d3d3d34; box-shadow: none;">
                             <div>
                                 <label for="">Email:</label>
                                 <input type="text" id="userProfile">
@@ -283,6 +299,11 @@
     const identitySenhaProfile = document.querySelector("#senhaProf");
     const identityCredencialProfile = document.querySelector("#credencialProf");
     const identityCredencialProfileImg = document.querySelector("#credencialImg");
+    const identityUserMenu = document.getElementById("nomeMenu");
+    const credencialUserMenu = document.getElementById("credMenu");
+
+    identityUserMenu.innerHTML = user.email;
+    credencialUserMenu.innerHTML = user.credencial;
 
     identityUserC.innerHTML = user.email;
     identityUser.innerHTML = user.email;
