--- a/projeto/Dashboard/dashboard/dash.html
+++ b/projeto/Dashboard/dashboard/dash.html
@@ -117,7 +117,7 @@
             <div class="flex-station">
                 <div class="viewStation">
                     <div class="station">
-                        <p>Estação Trianom Masp</p>
+                        <p id="nomeEstacao"></p>
                     </div>
                     <div class="profile-notification perfil-desk">
                         <div class="popover">
