--- a/projeto/Dashboard/dashboard/perfil.html
+++ b/projeto/Dashboard/dashboard/perfil.html
@@ -199,7 +199,7 @@
 
                             <div>
                                 <label for="">Senha:</label>
-                                <input type="text" id="senhaProf">
+                                <input type="password" id="senhaProf">
                             </div>
 
                             <div>
